--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cheerio": "^1.0.0-rc.3",
     "colors": "^1.3.0",
     "config": "^1.30.0",
-    "node-cron": "^1.2.1",
     "cross-env": "^5.2.0",
-    "puppeteer": "^1.14.0"
+    "node-cron": "^1.2.1",
+    "puppeteer": "^1.14.0",
+    "request": "^2.88.2"
   }
 }
